@@ -46,5 +46,5 @@ IF(CMTK_USE_CUDA)
 ENDIF(CMTK_USE_CUDA)
 
 FOREACH(T ${Tests})
-	  ADD_TEST(${T} ${EXECUTABLE_OUTPUT_PATH}/libBaseTests ${T})
+  ADD_TEST(${T} ${EXECUTABLE_OUTPUT_PATH}/libGPUTests ${T})
 ENDFOREACH(T Tests)
